--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -33,8 +33,7 @@ layout: compress
       <div class="not-found">
         <div class="container">
           <div class="title">404</div>
-          <p class="phrase">?</p>
-          <a class="solution" href="{{ site.url }}">back home</a>
+          <a class="solution" href="{{ site.url }}">home</a>
         </div>
       </div>
     </main>  
