--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -215,6 +215,7 @@
   font-size: $base-font-size;
   font-weight: 700;
   margin-bottom: 5px;
+  margin-top: 10px;
   color: $black;
 }
 
@@ -307,7 +308,6 @@
     font-weight: $bold-weight;
     line-height: 1.1;
     color: $black;
-    text-shadow: 1px 0px 0px $text-link-blue;
   }
   .phrase {
     color: $text-base-color;
