--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -24,6 +24,7 @@
 // Post title
 header {
   margin-top: 3em;
+  margin-bottom: 1.5em;
 
   .header-title {
     font-size: 2em;
@@ -246,5 +247,5 @@ header {
 }
 
 .post-updated-at {
-  font-family: "Ubuntu mono", "monospace";
+  font-family: $mono-family;
 }
