--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -238,7 +238,7 @@ body[data-theme="dark"] {
     input[type="search"] {
       color: $dark-text-base-color;
       &::-webkit-input-placeholder {
-        color: rgba(128,128,128,0.8);
+        color: rgba(187, 187, 187, 0.877);
       }
     }
   }
