--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -71,10 +71,13 @@ pre,
 ul,
 ol,
 dl,
-figure,
-%vertical-rhythm {
-  margin-top: $spacing-full - 20;
-  margin-bottom: $spacing-full - 20;
+figure {
+  margin-top: $spacing-full;
+  margin-bottom: $spacing-full;
+}
+
+h2 {
+  margin-bottom: 20px;
 }
 
 // strong | bold
@@ -283,8 +286,8 @@ blockquote {
   @include media-query($on-mobile) {
     max-width: -webkit-calc(#{$narrow-size} - (#{$spacing-full}));
     max-width: calc(#{$narrow-size} - (#{$spacing-full}));
-    padding-right: $spacing-full - 10;
-    padding-left: $spacing-full - 10;
+    padding-right: $spacing-full - 0.5em;
+    padding-left: $spacing-full - 0.5em;
 
     &.blurry {
       animation: 0.2s ease-in forwards blur;
