--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -7,7 +7,7 @@
   margin-right: auto;
   margin-left: auto;
   border-bottom: 1px solid $light;
-  padding: $spacing-full - 15px $spacing-full;
+  padding: $spacing-full - 0.75em $spacing-full;
   @extend %clearfix;
 }
 
