--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -96,8 +96,8 @@ header {
 
   > p {
     margin: 0;
-    padding-top: $spacing-full - 15;
-    padding-bottom: $spacing-full - 15;
+    padding-top: $spacing-full - 0.75em;
+    padding-bottom: $spacing-full - 0.75em;
   }
 
   ul.task-list {
@@ -130,7 +130,7 @@ header {
     color: $black;
     font-weight: $bold-weight;
     margin-top: $spacing-full;
-    margin-bottom: 0;
+    margin-bottom: 0.75em;
 
     &:hover {
       .anchor-head {
@@ -248,4 +248,11 @@ header {
 
 .post-updated-at {
   font-family: $mono-family;
+}
+
+/* imgs resize to fit window */
+img {
+  max-width:100%;
+  height:auto;
+  max-height:100%;
 }
